# mipt_ds_python_hw

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
