[tool.poetry]
name = "mipt-ds-python-hw"
version = "0.1.0"
description = ""
authors = ["Vitalii Karniushin <itallix@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyterlab = "^4.0.6"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
